Mise en place de la structure HTML

--- a/index.html
+++ b/index.html
@@ -18,6 +18,19 @@
 		<link rel="stylesheet" href="css/style.css" />
 	</head>
 	<body>
+		<header>
+			<h2><a href="./index.html" id="logo">Photonest</a></h2>
+			<form class="search-form">
+				<input type="text" name="search" class="search-input" />
+				<button type="submit" class="submit-btn">Search</button>
+			</form>
+		</header>
+		<main>
+			<div class="gallery"></div>
+		</main>
+		<div class="nav-button">
+			<button class="more">More</button>
+		</div>
 		<script src="./js/app.js"></script>
 	</body>
 </html>
