--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta name="robots" content="index,follow" />
 		<title>Photonest - photos on www</title>
 		<link
-			href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Montserrat&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
 			rel="stylesheet"
 		/>
 		<link type="image/png" rel="icon" href="./img/favicon.ico" />
