--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
 			rel="stylesheet"
 		/>
-		<link type="image/png" rel="icon" href="./img/favicon.ico" />
+		<link type="image/png" rel="icon" href="./img/lens.svg" />
 		<link rel="stylesheet" href="css/style.css" />
 	</head>
 	<body>
