Change site name + adding comments clear function activated

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			content="Ce site a été réalisé dans le cadre de mon autoformation à Javascript et permet de récupérer des collections d'images en fonction de mots clés passés dans un champ de recherche."
 		/>
 		<meta name="robots" content="index,follow" />
-		<title>Photonest - photos on www</title>
+		<title>Photonet - photos from the web</title>
 		<link
 			href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
 			rel="stylesheet"
@@ -19,7 +19,7 @@
 	</head>
 	<body>
 		<header>
-			<h2><a href="./index.html" id="logo">Photonest</a></h2>
+			<h2><a href="./index.html" id="logo">Phot@net</a></h2>
 			<form class="search-form">
 				<input type="text" name="search" class="search-input" />
 				<button type="submit" class="submit-btn">Search</button>
