finalizing photonet code

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			rel="stylesheet"
 		/>
 		<link type="image/png" rel="icon" href="./img/lens.svg" />
-		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="./css/style.css" />
 	</head>
 	<body>
 		<header>
