--- a/index.html
+++ b/index.html
@@ -1,36 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<meta
-			name="description"
-			content="Ce site a été réalisé dans le cadre de mon autoformation à Javascript et permet de récupérer des collections d'images en fonction de mots clés passés dans un champ de recherche."
-		/>
-		<meta name="robots" content="index,follow" />
-		<title>Photonet - photos from the web</title>
-		<link
-			href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
-			rel="stylesheet"
-		/>
-		<link type="image/png" rel="icon" href="./img/lens.svg" />
-		<link rel="stylesheet" href="./css/style.css" />
-	</head>
-	<body>
-		<header>
-			<h2><a href="./index.html" id="logo">Phot@net</a></h2>
-			<form class="search-form">
-				<input type="text" name="search" class="search-input" />
-				<button type="submit" class="submit-btn">Search</button>
-			</form>
-		</header>
-		<main>
-			<div class="gallery"></div>
-		</main>
-		<div class="nav-button">
-			<button class="more">More</button>
-		</div>
-		<script src="./js/app.js"></script>
-	</body>
+
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+	<meta name="description"
+		content="Ce site a été réalisé dans le cadre de mon autoformation à Javascript et permet de récupérer des collections d'images en fonction de mots clés passés dans un champ de recherche." />
+	<meta name="robots" content="index,follow" />
+	<title>Photonet - photos from the web</title>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+	<link type="image/png" rel="icon" href="./img/lens.svg" />
+	<link rel="stylesheet" href="./css/style.css" />
+</head>
+
+<body>
+	<header>
+		<h2><a href="./index.html" id="logo">Phot@net</a></h2>
+		<form class="search-form">
+			<input type="text" name="search" class="search-input" />
+			<button type="submit" class="submit-btn">Search</button>
+		</form>
+	</header>
+	<main>
+		<div class="gallery"></div>
+	</main>
+	<div class="nav-button">
+		<button class="more">More</button>
+	</div>
+	<script src="./js/app.js"></script>
+</body>
+
 </html>
